# bocom-ipc

./: CMakeLists.txt  README.md
bocom/: bocom_ipc.cpp  bocom_ipc.h
cli/: main_pub.c  main_pub_queue.c  main_rec.c  main_rec_queue.c
test/: test.cpp
